--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="x-icon" href="tab_icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness & Sport</title>
     <link rel="stylesheet" href="xyz.css">
@@ -11,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>ACTIVITAR</h1>
+               <img src="logo.PNG" alt="">
             </div>
             <nav>
                 <ul id="right">
@@ -19,7 +20,6 @@
                     <li><a href="#">Review</a></li>
                     <li><a href="#">Community</a></li>
                     <li><a href="#">Survey</a></li>
-                    <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <a href="login.html"><button id="sign">Sign In</button></a>
                 </ul>
