--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                        <!-- newline -->
                        <i class="fas fa-eye" id="toggle-login-password"></i>
                     </div>
-                    <a href="#" id="sign-in-btn">
+                    <a target="_blank" href="loginmaint.html" id="sign-in-btn">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -65,7 +65,7 @@
                         <label>Confirm Password</label>
                         <i class="fas fa-eye" id="cnf-password"></i>
                     </div>
-                    <a href="#" id="register-btn">
+                    <a href="loginmaint.html" id="register-btn">
                         <span></span>
                         <span></span>
                         <span></span>
