--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
                  </div>
                 <ul id="right">
                     <li><a href="#" class="active">Home</a></li>
+                    <span></span>
                     <li><a href="#">Review</a></li>
+                    <span></span>
                     <li><a href="#">Community</a></li>
+                    <span></span>
                     <li><a href="#">Survey</a></li>
+                    <span></span>
                     <li><a href="#">Contact Us</a></li>
+                    <span></span>
                     <a href="login.html"><button id="sign">Sign In</button></a>
                 </ul>
             </nav>
