--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="tab_icon.png">
+    <link rel="shortcut icon" type="x-icon" href="icon-modified.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLAY PERFECT</title>
+    <title>DRONA</title>
     <link rel="stylesheet" href="xyz.css">
 </head>
 <body class="b">
@@ -15,7 +15,7 @@
         
             <nav>
                 <div class="logo">
-                    <img src="logo.PNG" alt="">
+                    <img src="newlogo.PNG" class="lgimg" alt="">
                  </div>
                 <ul id="right">
                     <li><a href="#" class="active">Home</a></li>
