--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         
     </section>
     <div class="log"><a  href="login.html">SIGN IN</a> FOR MORE FEATURES </div>
+
+
+    <script src="nav.js"></script>
     
 </body>
 </html>
