--- a/afterlogin.html
+++ b/afterlogin.html
@@ -58,7 +58,7 @@
         <a href="#" class="close-btn" onclick="toggleMenu()"></a>
         <a href="index.html" class="menu-link" onclick="changeActive(this)">Home</a>
         <a href="#" class="menu-link" onclick="changeActive(this)">Review</a>
-        <a href="#" class="menu-link" onclick="changeActive(this)">Survey</a>
+        <a href="afterloginsurvey.html" class="menu-link" onclick="changeActive(this)">Survey</a>
         <a href="#" class="menu-link" onclick="changeActive(this)">Community</a>
         <a href="index.html"><button id="sign" onclick="signOut()">Sign Out</button></a>
     </div>
