user profile logo

--- a/survey.html
+++ b/survey.html
@@ -55,9 +55,9 @@
     <!-- Side Menu -->
     <div id="sideMenu" class="side-menu">
         <a href="#" class="close-btn" onclick="toggleMenu()"></a>
-        <a href="index.html" class="menu-link" onclick="changeActive(this)">Home</a>
+        <a href="afterlogin.html" class="menu-link" onclick="changeActive(this)">Home</a>
         <a href="#" class="menu-link" onclick="changeActive(this)">Review</a>
-        <a href="survey.html" class="menu-link" onclick="changeActive(this)">Survey</a>
+        <a href="survey.html" id="survey-link" onclick="changeActive(this)">Survey</a>
         <a href="#" class="menu-link" onclick="changeActive(this)">Community</a>
         <a href="login.html"><button id="sign">Sign In</button></a>
     </div>
