--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <div id="sideMenu" class="side-menu">
         <a href="#" class="close-btn" onclick="toggleMenu()"></a>
         <a href="index.html" class="menu-link" onclick="changeActive(this)">Home</a>
-        <a href="#" class="menu-link" onclick="changeActive(this)">Review</a>
+        <a href="maintenance.html" class="menu-link" onclick="changeActive(this)">Review</a>
         <a href="survey.html" class="menu-link" onclick="changeActive(this)">Survey</a>
-        <a href="#" class="menu-link" onclick="changeActive(this)">Community</a>
+        <a href="maintenance.html" class="menu-link" onclick="changeActive(this)">Community</a>
         <a href="login.html"><button id="sign">Sign In</button></a>
     </div>
     
