--- a/afterlogin.html
+++ b/afterlogin.html
@@ -30,10 +30,10 @@
             <div id="sideMenu" class="side-menu">
                 <img src="userprofile.jpg" class="profile-img" alt="User Profile">
                 <a href="#" class="close-btn" onclick="toggleMenu()"></a>
-                <a href="index.html" class="menu-link" onclick="changeActive(this)">Home</a>
-                <a href="#" class="menu-link" onclick="changeActive(this)">Review</a>
+                <a href="afterlogin.html" class="menu-link" onclick="changeActive(this)">Home</a>
+                <a href="maintenance.html" class="menu-link" onclick="changeActive(this)">Review</a>
                 <a href="afterloginsurvey.html" class="menu-link" onclick="changeActive(this)">Survey</a>
-                <a href="#" class="menu-link" onclick="changeActive(this)">Community</a>
+                <a href="maintenance.html" class="menu-link" onclick="changeActive(this)">Community</a>
                 <a href="index.html"><button id="sign" onclick="signOut()">Sign Out</button></a>
             </div>
         </div>
