--- a/injury.html
+++ b/injury.html
@@ -3,41 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Maintenance</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #e0e0e0;
-            background-image: url("maintenancepage.png");
-            background-size: cover;
-            background-position: center;
-        }
-        .container {
-            text-align: center;
-            padding: 20px;
-            border: 2px solid #333;
-            border-radius: 10px;
-            background-color: rgba(30, 30, 30, 0.8);
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        }
-        h1 {
-            color: #ffffff;
-        }
-        p {
-            color: #b0b0b0;
-        }
-    </style>
+    <title>Rehab Exercise</title>
+    <link rel="stylesheet" href="injury.css">
 </head>
 <body>
-   
-    <div class="container">
-        <h1>Site Under Maintenance</h1>
-        <p>We are currently performing scheduled maintenance. Will be back shortly !!!</p>
+
+    <!-- Navbar Section -->
+    <nav class="navbar">
+        <h1>Rehab Exercise</h1>
+    </nav>
+
+    <!-- Body Section -->
+    <div class="main-content">
+        <!-- 6 Rectangular Boxes in 2x3 Grid -->
+        <div class="box-container">
+            <div class="box"><a href="maintenance.html"><div>FOOT</div></a></div>
+            <div class="box"><a href="maintenance.html"><div>LOWER LEG AND ANKLE</div></a></div>
+            <div class="box"><a href="maintenance.html"><div>SHOULDER</div></a></div>
+            <div class="box"><a href="maintenance.html"><div>ELBOW</div></a></div>
+            <div class="box"><a href="maintenance.html"><div>KNEE</div></a></div>
+            <div class="box"><a href="maintenance.html"><div>HIP, THIGH, GROIN</div></a></div>
+        </div>
     </div>
+
 </body>
+</html>
