--- a/nutrition.html
+++ b/nutrition.html
@@ -3,41 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Maintenance</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #e0e0e0;
-            background-image: url("maintenancepage.png");
-            background-size: cover;
-            background-position: center;
-        }
-        .container {
-            text-align: center;
-            padding: 20px;
-            border: 2px solid #333;
-            border-radius: 10px;
-            background-color: rgba(62, 34, 34, 0.8);
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        }
-        h1 {
-            color: #ffffff;
-        }
-        p {
-            color: #b0b0b0;
-        }
-    </style>
+    <title>Nutrition</title>
+    <link rel="stylesheet" href="nutrition.css">
 </head>
 <body>
-   
-    <div class="container">
-        <h1>Site Under Maintenance</h1>
-        <p>We are currently performing scheduled maintenance. Will be back shortly !!!</p>
-    </div>
+    <header>
+        <nav>
+            <h1>Nutrition</h1>
+        </nav>
+    </header>
+    <main>
+        <div class="box-container">
+            <div class="box"><a href="maintenance.html"> <div> SPORTS BASED <br> PLAN </div></a></div>
+            <div class="box"><a href="maintenance.html"><div>AGE BASED <br> PLAN </div></a></div>
+            <div class="box"><a href="maintenance.html"><div>LIFESTYLE <br> BASED PLAN</div></a></div>
+        </div>
+    </main>
 </body>
+</html>
