--- a/spcTrain.html
+++ b/spcTrain.html
@@ -12,14 +12,22 @@
             <h1>Specific Sports Training</h1>
         </nav>
     </header>
+
+    <!-- Background Image -->
+    <div class="backimg-container">
+        <img class="backimg" src="spectrabck.jpg" alt="">
+    </div>
+
     <main>
-        <div class="box-container">
-            <div class="box"><a href="maintenance.html"><div>FOOTBALL</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>BASKETBALL</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>TRACK <br> & FIELD</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>BADMINTON</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>KABADDI</div></a></div>
-        </div>
+        <section class="ft">
+            <div class="box-container">
+                <div class="box"><a href="maintenance.html"><img class="jpg" src="footbal.jpg" alt=""><div class="txt">FOOTBALL</div></a></div>
+                <div class="box"><a href="maintenance.html"><img class="jpeg" src="basketball.jpg" alt=""><div class="bskt">BASKETBALL</div></a></div>
+                <div class="box"><a href="maintenance.html"><img class="jpeg" src="run.jpg" alt=""><div class="bskt">TRACK & FIELD</div></a></div>
+                <div class="box"><a href="maintenance.html"><img class="jpeg" src="badminton.jpg" alt=""><div class="txt">BADMINTON</div></a></div>
+                <div class="box"><a href="maintenance.html"><img class="jpg" src="kabadi.jpg" alt=""><div class="txt">KABADDI</div></a></div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
