sob sesh ar parchi na tata

--- a/healthtracker.html
+++ b/healthtracker.html
@@ -13,10 +13,26 @@
         </nav>
     </header>
     <main>
+        <!-- Box Container -->
         <div class="box-container">
-            <div class="box"><a href="maintenance.html"><div>BODY MASS INDEX</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>HYDRATION TRACKER</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>SLEEP TRACKER</div></a></div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="jpg" src="bmi.jpg" alt="Body Mass Index">
+                    <div>BODY MASS INDEX</div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="jpg" src="hydrATION.jpg" alt="Hydration Tracker">
+                    <div>HYDRATION TRACKER</div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="jpg" src="sleep.jpg" alt="Sleep Tracker">
+                    <div>SLEEP TRACKER</div>
+                </a>
+            </div>
         </div>
     </main>
 </body>
