--- a/injury.html
+++ b/injury.html
@@ -15,14 +15,49 @@
 
     <!-- Body Section -->
     <div class="main-content">
+        <!-- Background Image Container -->
+        <div class="backimg-container">
+            <img class="backimg" src="backgr.jpg" alt="Background">
+        </div>
+
         <!-- 6 Rectangular Boxes in 2x3 Grid -->
         <div class="box-container">
-            <div class="box"><a href="maintenance.html"><div>FOOT</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>LOWER LEG AND ANKLE</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>SHOULDER</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>ELBOW</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>KNEE</div></a></div>
-            <div class="box"><a href="maintenance.html"><div>HIP, THIGH, GROIN</div></a></div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="box-image" src="ankel.jpg" alt="Ankle">
+                    <div>ANKLE</div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="box-image" src="lower leg.jpg" alt="Lower Leg">
+                    <div>LOWER LEG</div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="box-image" src="shoulder.jpg" alt="Shoulder">
+                    <div>SHOULDER</div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="box-image" src="elbow.jpg" alt="Elbow">
+                    <div>ELBOW</div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="box-image" src="knee.jpg" alt="Knee">
+                    <div>KNEE</div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="box-image" src="growing.jpg" alt="Hip, Thigh, Groin">
+                    <div>HIP, THIGH, GROIN</div>
+                </a>
+            </div>
         </div>
     </div>
 
