--- a/nutrition.html
+++ b/nutrition.html
@@ -14,9 +14,24 @@
     </header>
     <main>
         <div class="box-container">
-            <div class="box"><a href="maintenance.html"> <div> SPORTS BASED <br> PLAN </div></a></div>
-            <div class="box"><a href="maintenance.html"><div>AGE BASED <br> PLAN </div></a></div>
-            <div class="box"><a href="maintenance.html"><div>LIFESTYLE <br> BASED PLAN</div></a></div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="box-image" src="sportbased.jpg" alt="">
+                    <div>SPORTS BASED <br> PLAN</div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="box-image" src="agedbased.jpg" alt="">
+                    <div>AGE BASED <br> PLAN</div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="maintenance.html">
+                    <img class="box-image" src="lifestylebased.jpg" alt="">
+                    <div>LIFESTYLE <br> BASED PLAN</div>
+                </a>
+            </div>
         </div>
     </main>
 </body>
