--- a/yoga.html
+++ b/yoga.html
@@ -15,7 +15,7 @@
 
     <!-- Body Section -->
     <div class="main-content">
-        <!-- Content goes here -->
+        <img class="jpg" src="yogaphoto.jpg" alt="">
     </div>
 
 </body>
