--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <a href="maintenance.html" class="menu-link" onclick="changeActive(this)">Review</a>
         <a href="survey.html" class="menu-link" onclick="changeActive(this)">Survey</a>
         <a href="maintenance.html" class="menu-link" onclick="changeActive(this)">Community</a>
+        <a href="maintenance.html" class="menu-link" onclick="changeActive(this)">Scouts</a>
         <a href="login.html"><button id="sign">Sign In</button></a>
     </div>
     
