--- a/afterlogin.html
+++ b/afterlogin.html
@@ -34,6 +34,7 @@
                 <a href="maintenance.html" class="menu-link" onclick="changeActive(this)">Review</a>
                 <a href="afterloginsurvey.html" class="menu-link" onclick="changeActive(this)">Survey</a>
                 <a href="maintenance.html" class="menu-link" onclick="changeActive(this)">Community</a>
+                <a href="maintenance.html" class="menu-link" onclick="changeActive(this)">Scouts</a>
                 <a href="index.html"><button id="sign" onclick="signOut()">Sign Out</button></a>
             </div>
         </div>
